--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,39 +1,99 @@
 
+// // Custom Theming for Angular Material
+// // For more information: https://material.angular.io/guide/theming
+// @import '~@angular/material/theming';
+// // Plus imports for other components in your app.
+
+// // Include the common styles for Angular Material. We include this here so that you only
+// // have to load a single css file for Angular Material in your app.
+// // Be sure that you only ever include this mixin once!
+// @include mat-core();
+
+// // Define the palettes for your theme using the Material Design palettes available in palette.scss
+// // (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// // hue. Available color palettes: https://material.io/design/color/
+// $business-web-primary: mat-palette($mat-indigo);
+// $business-web-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// // The warn palette is optional (defaults to red).
+// $business-web-warn: mat-palette($mat-red);
+
+// // Create the theme object. A theme consists of configurations for individual
+// // theming systems such as "color" or "typography".
+// $business-web-theme: mat-light-theme((
+//   color: (
+//     primary: $business-web-primary,
+//     accent: $business-web-accent,
+//     warn: $business-web-warn,
+//   )
+// ));
+
+// // Include theme styles for core and each component used in your app.
+// // Alternatively, you can import and @include the theme mixins for each component
+// // that you are using.
+// @include angular-material-theme($business-web-theme);
+
+// /* You can add global styles to this file, and also import other style files */
+
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Itim:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Kanit:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Prompt:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin-ext');
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
+$custom-typography: mat-typography-config($font-family: 'Kanit');
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat-core($custom-typography);
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$business-web-primary: mat-palette($mat-indigo);
-$business-web-accent: mat-palette($mat-pink, A200, A100, A400);
+$spay-primary: mat-palette($mat-blue, A200, A100, A400);
+$spay-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$business-web-warn: mat-palette($mat-red);
+$spay-warn: mat-palette($mat-red);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$business-web-theme: mat-light-theme((
-  color: (
-    primary: $business-web-primary,
-    accent: $business-web-accent,
-    warn: $business-web-warn,
-  )
-));
+$spay-theme: mat-light-theme((color: (primary: $spay-primary,
+      accent: $spay-accent,
+      warn: $spay-warn,
+    )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($business-web-theme);
+@include angular-material-theme($spay-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+// // body {
+// //   margin: 0;
+// //   font-family: Roboto, "Kanit", sans-serif;
+// // }
+
+
+// h1,
+// h2,
+// h3 {
+
+//   color: rgba(0, 0, 0, 0.541);
+//   font-weight: normal;
+
+// }
