--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,1 +1,58 @@
-<p>home works!</p>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
+<div><p>home works!</p></div>
