--- a/src/app/layout/components/toolbar/toolbar.component.scss
+++ b/src/app/layout/components/toolbar/toolbar.component.scss
@@ -1,6 +1,16 @@
 .mat-toolbar {
   background-color: white;
   border-bottom: 1px solid rgb(241, 235, 235);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  // background-color: #1976d2;
+  color: white;
+  font-weight: 600;
 
   img {
     height: 80%;
@@ -37,3 +47,16 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+// .mat-toolbar {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   height: 60px;
+//   display: flex;
+//   align-items: center;
+//   // background-color: #1976d2;
+//   color: white;
+//   font-weight: 600;
+// }
