--- a/src/app/layout/layout1/layout1.component.html
+++ b/src/app/layout/layout1/layout1.component.html
@@ -1,2 +1,5 @@
 <app-toolbar *ngIf="isAuthenticated"></app-toolbar>
-<router-outlet> </router-outlet>
+
+<div id="main">
+  <router-outlet></router-outlet>
+</div>
